--- a/hRaft.cabal
+++ b/hRaft.cabal
@@ -16,9 +16,18 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Election
-  -- other-modules:       
+  hs-source-dirs:      src
+  exposed-modules: Hraft
+  other-modules:   Utility, Election, Types    
   other-extensions:    DeriveGeneric
   build-depends:       base >=4.6 && <4.7, network >=2.4 && <2.5, containers >=0.5 && <0.6, bytestring >=0.10 && <0.11, cereal >=0.4 && <0.5, random >=1.0 && <1.1
-  hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options: -Wall
+
+
+
+executable hraft
+  main-is: Main.hs
+  build-depends:
+    base < 5
+   ,hRaft 
