--- a/hRaft.cabal
+++ b/hRaft.cabal
@@ -20,7 +20,7 @@ library
   exposed-modules: Hraft, Election
   other-modules:   Utility, Types    
   other-extensions:    DeriveGeneric
-  build-depends:       base >=4.6 && <4.7, network >=2.4 && <2.5, containers >=0.5 && <0.6, bytestring >=0.10 && <0.11, cereal >=0.4 && <0.5, random >=1.0 && <1.1
+  build-depends:       base >=4.6 && <4.7, network >=2.4 && <2.5, containers >=0.5 && <0.6, bytestring >=0.10 && <0.11, cereal >=0.4 && <0.5, random >=1.0 && <1.1 ,directory
   default-language:    Haskell2010
   --ghc-options: -Wall
 
